[tool.poetry]
name = "symbols-db"
version = "0.1.0"
description = ""
authors = ["Aryan Rajoria <aryanrajoria1003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
blint = {path = "../blint/", develop = true}

[tool.poetry.scripts]
symbols-db = 'symbols_db.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
